# Virtual-RALT-Standalone

./: CMakeLists.txt  README.md  package.xml
launch/: virtual_ralt_standalone.launch
models/ralt/structure/: model.config  model.sdf
models/ralt/structure/materials/script/: house_1.material
models/ralt/structure/meshes/: fulllab.dae
worlds/: virtual_ralt_standalone.world
